# reworked map construction to be more reusable # moved tests into extra target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project (SpriteAniGen)
 
 # find all source and header files
 file(GLOB_RECURSE SOURCE_FILES "src/*.cpp" "src/*.hpp" "src/*.inl")
+list(REMOVE_ITEM SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/src/main.cpp")
 
 # organize the files according to the organisation in the file system
 # from: http:#cmake.3232098.n2.nabble.com/Keep-folder-structure-in-Visual-Studio-Project-generated-with-CMake-td7586044.html
@@ -25,35 +26,59 @@ endmacro()
 # execute tha macro
 GroupSources(src)
 
-add_executable(AniGen ${SOURCE_FILES})
-set_target_properties(AniGen PROPERTIES
+add_library(AniGenLib ${SOURCE_FILES})
+set_target_properties(AniGenLib PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED YES
 )
 
+add_executable(AniGen "src/main.cpp")
+set_target_properties(AniGen PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+)
+target_link_libraries(AniGen PRIVATE AniGenLib)
+
+add_executable(Tests "tests/tests.cpp")
+set_target_properties(Tests PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+)
+target_link_libraries(Tests PRIVATE AniGenLib)
+target_include_directories(Tests PRIVATE "src/")
+
+
 if (MSVC)
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT AniGen)
+	# this should be set by vcpkg and can cause issues with libraries
+	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+#	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>$<$<STREQUAL:${VCPKG_CRT_LINKAGE},dynamic>:DLL>" CACHE STRING "")
 else()
 	# public options are propagated to the other targets
-	target_compile_options(AniGen PUBLIC "$<$<CONFIG:DEBUG>:-Wall;-pedantic>")
-	target_compile_options(AniGen PUBLIC "$<$<CONFIG:RELEASE>:-Wall;-pedantic;-O3;-march=native;-DNDEBUG>")
+	target_compile_options(AniGenLib PUBLIC "$<$<CONFIG:DEBUG>:-Wall;-pedantic>")
+	target_compile_options(AniGenLib PUBLIC "$<$<CONFIG:RELEASE>:-Wall;-pedantic;-O3;-march=native;-DNDEBUG>")
 endif (MSVC)
 
 #---------------------------------------------------------------------------------------
 # libraries
 #---------------------------------------------------------------------------------------
 
+# SFML
 find_package(SFML COMPONENTS system graphics window QUIET)
 if (NOT SFML_FOUND)
 	message("SFML not found. Attempting to use local version.")
 	set(SFML_BUILD_GRAPHICS TRUE)
 	set(SFML_BUILD_WINDOW TRUE)
-	set(BUILD_SHARED_LIBS TRUE)
+	set(BUILD_SHARED_LIBS FALSE)
 	set(SFML_BUILD_AUDIO FALSE)
 	set(SFML_BUILD_EXAMPLES FALSE)
 	set(SFML_BUILD_DOC FALSE)
 	set(SFML_BUILD_NETWORK FALSE)
-	target_include_directories(AniGen PRIVATE "dependencies/SFML/include")
+	target_include_directories(AniGenLib PRIVATE "dependencies/SFML/include")
 	add_subdirectory("dependencies/SFML")
 endif(NOT SFML_FOUND)
-target_link_libraries(AniGen PRIVATE sfml-system sfml-graphics sfml-window)
+target_link_libraries(AniGenLib PUBLIC sfml-system sfml-graphics sfml-window)
+
+# arg parsing
+find_package(args CONFIG REQUIRED)
+target_link_libraries(AniGen PRIVATE taywee::args)
