+ dependencies as submodules (usage is optional)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ endif (MSVC)
 # SFML
 find_package(SFML COMPONENTS system graphics window QUIET)
 if (NOT SFML_FOUND)
-	message("SFML not found. Attempting to use local version.")
+	message("SFML not found. Attempting to use local version at dependencies/SFML.")
 	set(SFML_BUILD_GRAPHICS TRUE)
 	set(SFML_BUILD_WINDOW TRUE)
 	set(BUILD_SHARED_LIBS FALSE)
@@ -74,11 +74,15 @@ if (NOT SFML_FOUND)
 	set(SFML_BUILD_EXAMPLES FALSE)
 	set(SFML_BUILD_DOC FALSE)
 	set(SFML_BUILD_NETWORK FALSE)
-	target_include_directories(AniGenLib PRIVATE "dependencies/SFML/include")
 	add_subdirectory("dependencies/SFML")
 endif(NOT SFML_FOUND)
 target_link_libraries(AniGenLib PUBLIC sfml-system sfml-graphics sfml-window)
 
 # arg parsing
-find_package(args CONFIG REQUIRED)
-target_link_libraries(AniGen PRIVATE taywee::args)
+find_package(args CONFIG QUIET)
+if (NOT args_FOUND)
+	message("Args not found. Trying a local version in dependencies/args.")
+	target_include_directories(AniGen PRIVATE "dependencies/args")
+else()
+	target_link_libraries(AniGen PRIVATE taywee::args)
+endif(NOT args_FOUND)
