+ similarity argument to use optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,4 +96,5 @@ endif(NOT args_FOUND)
 if (WITH_TORCH)
 	find_package(Torch REQUIRED)
 	target_link_libraries(AniGenLib PUBLIC "${TORCH_LIBRARIES}")
+	add_compile_definitions(WITH_TORCH)
 endif (WITH_TORCH)
